--- a/src/pages/context/connect/docs.mdx
+++ b/src/pages/context/connect/docs.mdx
@@ -28,7 +28,7 @@ connect(selectors: Map<Selectors>, actions: Map<ActionCreator>, options: Object)
 
   3. `options.pure: Boolean`
 
-    If the *Component* is a functional component, wrapps it in *React.memo*.
+    If the *Component* is a functional component, wraps it in *React.memo*.
 
     **Default:** `true`
 
