--- a/src/pages/context/creation/docs.mdx
+++ b/src/pages/context/creation/docs.mdx
@@ -16,7 +16,7 @@ createContext(definition: Definition)(Component: ReactComponent)
 
 ### Usage
 
-  - Creates a *context*, runs the *module* and makes the *context* available.
+  Creates a *context*, runs the *module* and makes the *context* available.
 
   ```ts
   const Page = createContext({
