--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -9,18 +9,4 @@ Good software design is about decomposing a complex problem into simple componen
 
 </PageDescription>
 
-<FeatureCard
-    color="dark"
-    href="/getting-started"
-    title="Getting started"
-    actionIcon="arrowRight"
-    className="homepage-feature"
-    >
-
-<ArtDirection>
-
-![refinery pipes](../images/pipes.png)
-
-</ArtDirection>
-
-</FeatureCard>
+![pipes](../images/pipes.png)
