--- a/src/pages/middleware/bridge/usage.mdx
+++ b/src/pages/middleware/bridge/usage.mdx
@@ -6,7 +6,7 @@ description: Description of the bridge middleware
 
 ## addBridge
 
-*redux-mvc* allows to setup a global context that can be accesible from every other child context. It is useful to put any data or state that will be reused among contexts.
+*redux-mvc* allows to setup a global context that can be accessible from every other child context. It is useful to put any data or state that will be reused among contexts.
 
 
 - To provide the global context you must specify the *contextId* as the special constant *GLOBAL_CONTEXT_ID*:
