--- a/src/pages/examples.mdx
+++ b/src/pages/examples.mdx
@@ -3,7 +3,34 @@ title: Examples
 description: Examples
 ---
 
-TodoMVC with *redux-mvc* and *redux-saga*
+## TodoMVC with *redux-mvc* and *redux-saga*
 
-- [Source](https://github.com/redux-mvc/core/tree/master/src/Examples)
-- [Live](https://redux-mvc.github.io/core/todo-mvc#/)
+### Source
+
+[TodoMVC](https://github.com/redux-mvc/core/tree/master/src/Examples/TodoMVC)
+
+### Instructions
+
+- Chekout the source code
+
+```
+git clone https://github.com/redux-mvc/core.git
+```
+
+- Install the dependencies
+
+```
+yarn install
+```
+
+- Run the dev mode
+
+```
+yarn dev
+```
+
+- Go to [http://localhost:3000/todo-mvc#/](http://localhost:3000/todo-mvc#/)
+
+- Check how sagas is added to the architecture [sagas recipe](https://github.com/redux-mvc/core/blob/master/src/Examples/App/utils.js)
+
+
