Add link to live todomvc example

--- a/src/pages/examples.mdx
+++ b/src/pages/examples.mdx
@@ -5,9 +5,7 @@ description: Examples
 
 ## TodoMVC with *redux-mvc* and *redux-saga*
 
-### Source
-
-[TodoMVC](https://github.com/redux-mvc/core/tree/master/src/Examples/TodoMVC)
+[Source](https://github.com/redux-mvc/core/tree/master/src/Examples/TodoMVC) &  [Live](https://redux-mvc.github.io/core/#/todo-mvc/)
 
 ### Instructions
 
