--- a/src/pages/middleware/bridge/usage.mdx
+++ b/src/pages/middleware/bridge/usage.mdx
@@ -13,6 +13,8 @@ description: Description of the bridge middleware
 To provide the global context you must specify the *contextId* as the special constant *GLOBAL_CONTEXT_ID*:
 
 ```ts
+import { createContext } from "@redux-mvc/core"
+
 const decorate = createContext({
     module,
     contextId: GLOBAL_CONTEXT_ID
@@ -23,6 +25,9 @@ const decorate = createContext({
 To consume state from the global context you must pass an array of namespaces to the *addBridge* module decorator:
 
 ```ts
+import * as R from "ramda"
+import { addBridge } from "@redux-mvc/core"
+
 const newModule = R.compose(
     addBridge({ trackGlobalNamespaces: [RoutingModel.namespace] })
     ...
@@ -35,6 +40,9 @@ Note: The actions from the global namespace will be forwarded to the local conte
 To choose what kind of actions can be dispatched to the global context you need to specify the *dispatchToGlobal* predicate function:
 
 ```ts
+import * as R from "ramda"
+import { addBridge } from "@redux-mvc/core"
+
 const newModule = R.compose(
     addBridge({ 
       dispatchToGlobal: action => action.type === "Routing/push" 
