Fix getting started npm install

--- a/src/pages/getting-started.mdx
+++ b/src/pages/getting-started.mdx
@@ -23,7 +23,7 @@ Installation and basic setup for the *redux-mvc* counter example.
 
 
   ```shell
-  npm install @redux-mvc/redux-mvc
+  npm install @redux-mvc/core
   ```
 
 ### Dependencies
